# aic_download_tool

./: README.md  YmodemFileTransmit.cpp  main.cpp  widget.cpp  widget.h  widget.ui  widget.ui.autosave
QT5_ver/: YmodemFileTransmit.h
QT6_ver/: CMakeLists.txt  CMakeLists.txt.user.913ea07  app_icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  version.h.in
QT6_ver/protocol/: CMakeLists.txt  YmodemFileReceive.cpp  YmodemFileReceive.h  YmodemFileTransmit.cpp  YmodemFileTransmit.h
bootx/: bootx  flash.bat
